# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: test.yml
page_analyzer/: app.py  database.py  tools.py
page_analyzer/templates/: error.html  index.html  layout.html  url.html  urls.html
