[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "data>=0.4",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "validators>=0.34.0",
    "waitress>=3.0.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.4",
]


[tool.hatch.build.targets.sdist]
include = ["page_analyzer"]

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
